/cp 2013-08-28  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/58255
	* init.c (build_aggr_init): When init == void_type_node do not
	set LOOKUP_ONLYCONVERTING.

/testsuite
2013-08-28  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58255
	* g++.dg/cpp0x/dc7.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@202061 138bc75d-0d04-0410-961f-82ee72b054a4